# ChessFENGenerator

./: CMakeLists.txt  main.cpp  main.qml
resources/: res.qrc
sources/: Chess.qml
